--- a/PlantAlarm/AppShell.xaml
+++ b/PlantAlarm/AppShell.xaml
@@ -4,17 +4,17 @@
        x:Class="PlantAlarm.AppShell"
        xmlns:pages="clr-namespace:PlantAlarm.Views">
     <TabBar Shell.TabBarTitleColor="#FFFFFF" Shell.TabBarUnselectedColor="#88FFFFFF">
-        <Tab Title="Today" Shell.TabBarBackgroundColor="#73B5DD" Shell.BackgroundColor="#73B5DD" Icon="TodayPageIcon.png" >
+        <Tab Title="Today" Shell.TabBarBackgroundColor="#73B5DD" Icon="TodayPageIcon.png" >
             <ShellContent ContentTemplate="{DataTemplate pages:TodayPage}" />
         </Tab>
-        <Tab Title="Garden" Shell.TabBarBackgroundColor="#37C72A" Shell.BackgroundColor="#37C72A" Icon="GardenPageIcon.png">
+        <Tab Title="Garden" Shell.TabBarBackgroundColor="#37C72A" Icon="GardenPageIcon.png">
             <ShellContent Title="Plants" ContentTemplate="{DataTemplate pages:PlantsPage}" />
             <ShellContent Title="Accessories" ContentTemplate="{DataTemplate pages:AccessoriesPage}" />
         </Tab>
-        <Tab Title="Tasks" Shell.TabBarBackgroundColor="#FDA600" Shell.BackgroundColor="#FDA600" Icon="ActivitiesPageIcon.png">
+        <Tab Title="Tasks" Shell.TabBarBackgroundColor="#FDA600" Icon="ActivitiesPageIcon.png">
             <ShellContent ContentTemplate="{DataTemplate pages:TasksPage}" />
         </Tab>
-        <Tab Title="Settings" Shell.TabBarBackgroundColor="#E33942" Shell.BackgroundColor="#E33942" Icon="SettingsPageIcon.png" >
+        <Tab Title="Settings" Shell.TabBarBackgroundColor="#E33942" Icon="SettingsPageIcon.png" >
             <ShellContent ContentTemplate="{DataTemplate pages:SettingsPage}" />
         </Tab>
     </TabBar>
