Progress on settings page + Tasks page

--- a/PlantAlarm/AppShell.xaml
+++ b/PlantAlarm/AppShell.xaml
@@ -9,7 +9,7 @@
         </Tab>
         <Tab Title="Garden" Shell.TabBarBackgroundColor="#37C72A" Icon="GardenPageIcon.png">
             <ShellContent Title="Plants" ContentTemplate="{DataTemplate pages:PlantsPage}" />
-            <ShellContent Title="Accessories" ContentTemplate="{DataTemplate pages:AccessoriesPage}" />
+<!--            <ShellContent Title="Accessories" ContentTemplate="{DataTemplate pages:AccessoriesPage}" />-->
         </Tab>
         <Tab Title="Tasks" Shell.TabBarBackgroundColor="#FDA600" Icon="ActivitiesPageIcon.png">
             <ShellContent ContentTemplate="{DataTemplate pages:TasksPage}" />
