--- a/PlantAlarm/Views/PlantsPage.xaml
+++ b/PlantAlarm/Views/PlantsPage.xaml
@@ -14,15 +14,18 @@
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
                             <StackLayout>
-                                <BoxView HeightRequest="1" HorizontalOptions="Fill" BackgroundColor="White" VerticalOptions="Start"/>
+                                <BoxView HeightRequest="1" HorizontalOptions="Fill" BackgroundColor="White" 
+                                         VerticalOptions="Start"/>
                                 <StackLayout Orientation="Horizontal" Margin="10,5,10,5">
-                                    <StackLayout HorizontalOptions="StartAndExpand">
+                                    <Image WidthRequest="70" HeightRequest="70" Source="{Binding MainPhoto.Url}"  
+                                           Aspect="AspectFill" VerticalOptions="Center" />
+                                    <StackLayout HorizontalOptions="FillAndExpand">
                                         <Label Text="{Binding Plant.Name}" FontSize="17" />
                                     </StackLayout>
-                                    <Image WidthRequest="70" HeightRequest="70" Source="{Binding MainPhoto.Url}" VerticalOptions="Center" 
-                                           Aspect="AspectFill" />
+                                    <controls:WaterDropControl Margin="5"/>
                                 </StackLayout>
-                                <BoxView HeightRequest="1" HorizontalOptions="Fill" BackgroundColor="Gainsboro" VerticalOptions="End"/>
+                                <BoxView HeightRequest="1" HorizontalOptions="Fill" BackgroundColor="Gainsboro" 
+                                         VerticalOptions="End" />
                             </StackLayout>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
